[build-system]
requires = [
    "setuptools >= 61.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["VNRecode", "RenDroidUnpack", "VNDS2RenPy"]
include-package-data = true

[tool.setuptools.package-data]
'VNRecode' = ['*.py']
'VNDS2RenPy' = ['*.py']
'RenDroidUnpack' = ['*.py']

[project.scripts]
vnrecode = "VNRecode.__main__:init"
vnds2renpy = "VNDS2RenPy.__main__:main"
rendroid-unpack = "RenDroidUnpack.application:launch"

[project]
name = "vntools"
version = "2.0-dev"
requires-python = ">= 3.11"
dependencies = [
    "Pillow==10.3.0",
    "pillow-avif-plugin==1.4.3",
    "python-ffmpeg==2.0.12",
    "progress==1.6",
    "colorama==0.4.6"
]